WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59300
Handling of URLs like
http:/example.com/
is incorrect
https://bugs.webkit.org/show_bug.cgi?id=59300
Summary
Handling of URLs like http:/example.com/ is incorrect
Maciej Stachowiak
Reported
2011-04-24 03:35:26 PDT
Handling of URLs like
http:/example.com/
is incorrect
Attachments
Patch
(18.21 KB, patch)
2011-04-24 03:39 PDT
,
Maciej Stachowiak
staikos
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Maciej Stachowiak
Comment 1
2011-04-24 03:39:41 PDT
Created
attachment 90882
[details]
Patch
George Staikos
Comment 2
2011-04-24 06:56:11 PDT
Comment on
attachment 90882
[details]
Patch Nice patch!
Maciej Stachowiak
Comment 3
2011-04-24 15:54:08 PDT
Committed
r84762
: <
http://trac.webkit.org/changeset/84762
>
WebKit Review Bot
Comment 4
2011-04-24 16:38:23 PDT
http://trac.webkit.org/changeset/84762
might have broken SnowLeopard Intel Release (Tests) The following tests are not passing: fast/dom/HTMLAnchorElement/set-href-attribute-host.html fast/dom/HTMLAnchorElement/set-href-attribute-protocol.html fast/loader/url-parse-1.html http/tests/loading/cross-origin-XHR-willLoadRequest.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug