LayoutTests/fast/url/script-tests/segments.js
@@ -73,14 +73,25 @@ cases = [
   ["https:/example.com/",                    ["https:","example.com","0","/","",""]],
   ["madeupscheme:/example.com/",             ["madeupscheme:","","0","/example.com/","",""]],
   ["file:/example.com/",                     ["file:","","0","/example.com/","",""]],
-  ["fops:/example.com/",                     ["fops:","","0","/example.com/","",""]],
+  ["ftps:/example.com/",                     ["ftps:","","0","/example.com/","",""]],
   ["gopher:/example.com/",                   ["gopher:","example.com","0","/","",""]],
   ["ws:/example.com/",                       ["ws:","example.com","0","/","",""]],
   ["wss:/example.com/",                      ["wss:","example.com","0","/","",""]],
   ["data:/example.com/",                     ["data:","","0","/example.com/","",""]],
   ["javascript:/example.com/",               ["javascript:","","0","/example.com/","",""]],
   ["mailto:/example.com/",                   ["mailto:","","0","/example.com/","",""]],
-  
+  ["http:example.com/",                      ["http:","example.org","0","/foo/example.com/","",""]],
+  ["ftp:example.com/",                       ["ftp:","example.com","0","/","",""]],
+  ["https:example.com/",                     ["https:","example.com","0","/","",""]],
+  ["madeupscheme:example.com/",              ["madeupscheme:","","0","example.com/","",""]],
+  ["file:example.com/",                      ["file:","","0","/example.com/","",""]],
+  ["ftps:example.com/",                      ["ftps:","","0","example.com/","",""]],
+  ["gopher:example.com/",                    ["gopher:","example.com","0","/","",""]],
+  ["ws:example.com/",                        ["ws:","example.com","0","/","",""]],
+  ["wss:example.com/",                       ["wss:","example.com","0","/","",""]],
+  ["data:example.com/",                      ["data:","","0","example.com/","",""]],
+  ["javascript:example.com/",                ["javascript:","","0","example.com/","",""]],
+  ["mailto:example.com/",                    ["mailto:","","0","example.com/","",""]],  
 ];
 
 var originalBaseURL = canonicalize(".");
